Fix up old config

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://johnAtaalla.github.io/",
+  "homepage": "https://johnAtaalla.github.io/EOH",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
