--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://johnAtaalla.github.io/EOH",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
